[package]
name = "miniascape"
default-run = "miniascape_bin"
version = "0.1.0"
authors = ["Toru Niina <niina.toru.68u@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "miniascape_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18"
egui_extras = {version = "0.18", features = ["image"]}
epaint = "0.18"
eframe = { version = "0.18", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde-big-array = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
array-init = "2.0"
arrayvec = "0.7"
image = { version = "0.24", default-features = false, features = ["png"] }
rhai.version = "1.8"
rhai.features = [
    "serde",
    "wasm-bindgen", # comment out if you run this locally
    "only_i32",    # use only one integer type
    "f32_float",   # minimize size of Dynamic
    "no_closure",  # no variable sharing
#     "no_position", # remove info from parse error
    "unchecked",   # make script unsafe
]
rhai-rand = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
